feat(User Type): Created  User Type
