# src/shared/infra/http/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router } from 'express';
 
-import { entityTypesRoutes } from './entityTipes.routes';
+import { entityTypesRoutes } from './entityTypes.routes';
+import { userTypesRoutes } from './userTypes.routes';
 
 const router = Router();
 
 router.use('/entitytypes', entityTypesRoutes);
+router.use('/usertypes', userTypesRoutes);
 
 
 export { router };
